新增外弧线宽度的设定（arcWidth），略微完善了测试环境

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -18,6 +18,7 @@
     <attr name="arcSweepAngle" format="float" />
     <attr name="arcSweepAnglePercent" format="integer" />
     <attr name="arcColor" format="reference|color|integer" />
+    <attr name="arcWidth" format="dimension" />
 
   </declare-styleable>
 
