--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:circle_progress_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:circle_progress_view = "http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,16 +10,37 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.huang.customedview.MainActivity">
-  <com.huang.customedview.UI.CircleProgressView
-    android:layout_width="500dp"
-    android:layout_height="500dp"
-    android:gravity="center"
-    android:background="#cccccc"
-    circle_progress_view:centerText="123321"
-    circle_progress_view:centerTextSize="23sp"
-    circle_progress_view:centerCircleColor= "#ff4466"
-    circle_progress_view:arcColor = "0x90EE90"
-    circle_progress_view:arcStartAngle = "0"
-    circle_progress_view:arcSweepAngle = "180"
-    />
+
+    <com.huang.customedview.UI.CircleProgressView
+        android:id="@+id/activity_main_circleProgressView"
+        android:layout_width="788px"
+        android:layout_height="788px"
+        android:background="#cccccc"
+        android:gravity="center"
+        android:layout_centerHorizontal="true"
+        circle_progress_view:arcColor="0x90EE90"
+        circle_progress_view:arcStartAngle="0"
+        circle_progress_view:arcSweepAngle="180"
+        circle_progress_view:centerCircleColor="#607d8b"
+        circle_progress_view:centerText="123321"
+        circle_progress_view:centerTextSize="23sp" />
+    <EditText
+        android:id="@+id/activity_main_et"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="#999999"
+        android:gravity="center"
+        android:inputType="number"
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/activity_main_circleProgressView"
+        />
+    <Button
+        android:id="@+id/activity_main_setProgress"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="#cccccc"
+        android:gravity="center"
+        android:layout_below="@id/activity_main_et"
+        android:text="更新进度"
+        />
 </RelativeLayout>
